# WorldOnFire-backend

./: .gitignore  README.md  bulk_news_fetcher.py  data_handlers.py  geo_utils.py  main.py  news_scheduler.py  pyproject.toml  rss_feeds.py  rss_feeds.txt
world_on_fire/ai/: ai_handlers.py  multi_ai_handler.py
