[project]
name = "worldonfire-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.12.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.120.4",
    "feedparser>=6.0.12",
    "geopy>=2.4.1",
    "geotext>=0.4.0",
    "pydantic>=2.12.3",
    "requests>=2.31.0",
    "schedule>=1.2.2",
    "supabase>=2.23.0",
    "vadersentiment>=3.3.2",
]
